--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^5.6.3",
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.1",
     "formic": "^0.0.10",
+    "formik": "^2.1.2",
+    "formik-material-ui": "^1.0.0",
     "mobx": "^5.15.2",
     "mobx-react": "^6.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "yup": "^0.28.0"
   },
   "scripts": {
     "eject": "react-scripts eject",
