--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik-material-ui": "^1.0.0",
     "mobx": "^5.15.2",
     "mobx-react": "^6.1.5",
+    "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
